[package]
name = "beet_dom"
version.workspace = true
edition.workspace = true
description = "Utilities for dom rendering and interaction"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["dom", "wasm", "rsx", "web"]
categories.workspace = true
publish = true

[features]
default = ["serde", "nightly"]
client = []
nightly = ["beet_utils/nightly"]
tokens = ["beet_core/tokens"]
bevy_text = ["bevy/bevy_text"]
bevy_scene = ["bevy/bevy_scene", "serde"]
rustls-tls = ["fantoccini?/rustls-tls"]
serde = [
	"dep:serde",
	"dep:serde_json",
	"beet_core/serde",
]
chrome_dev_tools = ["beet_net/websockets","dep:exponential-backoff"]
webdriver = ["dep:fantoccini"]

[dependencies]
exponential-backoff = { workspace = true, optional = true }
beet_utils.workspace = true
beet_core.workspace = true
beet_net.workspace = true

bevy.workspace = true

extend.workspace = true
send_wrapper.workspace = true


serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fantoccini = { version = "0.22", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# web dependencies (WASM only)
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true

#https://rustwasm.github.io/wasm-bindgen/api/web_sys/
#https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
features = [
	# File
	"File",
	"FileList",
	# Blob
	'Blob',
	'BlobEvent',
	'BlobEventInit',
	'BlobPropertyBag',
	# HTML
	"Text",
	"Comment",
	"Node",
	"NodeList",
	'Headers',
	'Document',
	'Element',
	'Window',
	'HtmlAnchorElement',
	'HtmlButtonElement',
	'HtmlCanvasElement',
	'HtmlDivElement',
	'HtmlHeadElement',
	"HtmlInputElement",
	'HtmlIFrameElement',
	'HtmlLinkElement',
	'HtmlParagraphElement',
	'HtmlScriptElement',
	# Style
	'MediaQueryList',
	# Events
	'MouseEvent',
	'KeyboardEvent',
	# JS
	'console',
	'Navigator',
	'Performance',
	# Fetch
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'ReadableStream',
	'ReadableStreamDefaultReader',
	# Blob
	'Blob',
	'BlobEvent',
	'BlobEventInit',
	'BlobPropertyBag',
	# Url
	'Url',
	'History',
	'Location',
	'UrlSearchParams',
	# Sockets
	'BinaryType',
	'FileReader',
	'ErrorEvent',
	'MessageEvent',
	'ProgressEvent',
	'WebSocket',
	# Resize Observer
	'ResizeObserver',
	'ResizeObserverBoxOptions',
	'ResizeObserverEntry',
	'ResizeObserverOptions',
	'ResizeObserverSize',
	'DomRect',
	'DomRectReadOnly',
]

[dev-dependencies]
sweet.workspace = true
