[package]
name = "beet_dom"
version.workspace = true
edition.workspace = true
description = "Utilities for dom rendering and interaction"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["dom", "wasm", "rsx", "web"]
categories.workspace = true
publish = true

[features]
default = ["serde", "nightly"]
client = []
nightly = ["beet_utils/nightly"]
tokens = ["beet_core/tokens"]
bevy_text = ["bevy/bevy_text"]
tokio = ["dep:tokio"]
bevy_scene = ["bevy/bevy_scene", "serde"]
rustls-tls = ["fantoccini?/rustls-tls"]
serde = [
	"dep:serde",
	"dep:serde_json",
	"dep:base64",
	"beet_core/serde",
]
chrome_dev_tools = ["tokio","beet_net/tungstenite"]
webdriver = ["dep:fantoccini"]

[dependencies]
beet_utils.workspace = true
beet_core.workspace = true
beet_net.workspace = true

bevy.workspace = true

extend.workspace = true
send_wrapper.workspace = true
tokio = { workspace = true, optional = true }

# serde
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fantoccini = { version = "0.22", optional = true }
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# web dependencies (WASM only)
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true

#https://rustwasm.github.io/wasm-bindgen/api/web_sys/
#https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
workspace = true
features = [
	# File
	"File",
	"FileList",
	# HTML
	"Text",
	"Comment",
	"Node",
	"NodeList",
	'Document',
	'Element',
	'Window',
	'HtmlAnchorElement',
	'HtmlButtonElement',
	'HtmlCanvasElement',
	'HtmlDivElement',
	'HtmlHeadElement',
	"HtmlInputElement",
	'HtmlIFrameElement',
	'HtmlLinkElement',
	'HtmlParagraphElement',
	'HtmlScriptElement',
	# Style
	'MediaQueryList',
	# Events
	'MouseEvent',
	'KeyboardEvent',
	# JS
	'console',
	'Navigator',
	'Performance',
	# Url
	'Url',
	'History',
	'Location',
	'UrlSearchParams',
	# Resize Observer
	'ResizeObserver',
	'ResizeObserverBoxOptions',
	'ResizeObserverEntry',
	'ResizeObserverOptions',
	'ResizeObserverSize',
	'DomRect',
	'DomRectReadOnly',
]

[dev-dependencies]
sweet.workspace = true
