[package]
name = "beet_dom"
version.workspace = true
edition.workspace = true
description = "Utilities for dom rendering and interaction"
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["dom", "wasm", "rsx", "web"]
categories.workspace = true
publish = true

[features]
default = ["serde"]
client = []
nightly = ["beet_core/nightly"]
tokens = ["beet_core/tokens"]
bevy_text = ["bevy/bevy_text"]
bevy_scene = ["bevy/bevy_scene", "serde"]
serde = [
	"dep:serde",
	"dep:serde_json",
	"dep:base64",
	"beet_core/serde",
]
webdriver = ["beet_net/tungstenite", "dep:async-process"]

[dependencies]
beet_core.workspace = true
beet_net.workspace = true

bevy.workspace = true

extend.workspace = true
send_wrapper.workspace = true
bytes.workspace = true

# serde
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
web-sys.workspace = true

[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }
beet_dom = {path = ".", features=["nightly"]}
sweet = {workspace = true, features=["runner"]}
