[package]
name = "beet_ecs"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
beet_ecs_macros.workspace = true


log.workspace = true
anyhow.workspace = true
heck.workspace = true
petgraph.workspace = true
serde.workspace = true

extend.workspace = true
num-traits.workspace = true
strum.workspace = true
strum_macros.workspace = true

bevy_app.workspace = true
bevy_core.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_scene.workspace = true
bevy_time.workspace = true
bevy_utils.workspace = true

[dev-dependencies]
sweet.workspace = true
bincode.workspace = true
ron.workspace = true
serde_json.workspace = true

[[example]]
name = "test_beet_ecs"
path = "test/sweet.rs"
required-features = ["sweet/bevy_core"]
