[package]
name = "beet_ecs"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
beet_ecs_macros.workspace = true


log.workspace = true
anyhow.workspace = true
heck.workspace = true
petgraph.workspace = true
serde.workspace = true
bincode.workspace = true

extend.workspace = true
num-traits.workspace = true
strum.workspace = true
strum_macros.workspace = true

parking_lot.workspace = true
flume.workspace = true

bevy.workspace = true

[dev-dependencies]
pretty_env_logger.workspace = true
sweet.workspace = true
bincode.workspace = true
ron.workspace = true
serde_json.workspace = true

[[example]]
name = "test_beet_ecs"
path = "test/sweet.rs"
required-features = ["sweet/bevy_core"]
