[package]
name = "beet_ecs"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = []
# default = ["reflect"]
reflect = []
test = ["dep:sweet"]

[dependencies]
beet_ecs_macros.workspace = true

log.workspace = true
anyhow.workspace = true
heck.workspace = true
petgraph.workspace = true
serde.workspace = true

extend.workspace = true
num-traits.workspace = true

bevy.workspace = true
sweet = { workspace = true, optional = true }

[dev-dependencies]
pretty_env_logger.workspace = true
bincode.workspace = true
ron.workspace = true
sweet.workspace = true
