[package]
name = "beet_examples"
version.workspace = true
edition.workspace = true
description = "Bits and pieces for substantial beet examples"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# this feature is always enabled by beet if this crate is included
# but we use it to ensure no bevy_default for workspace tests
bevy_default = [
	"bevy/default",
	"beet_core/bevy_default",
	"beet_spatial/bevy_default",
	"beet_ml?/bevy_default",
	# "beet_bevy/bevy_default",
]
# enable beet_ml integration; pulled in by the top-level `ml` feature
ml = ["dep:beet_ml"]
# The agent-thread example tool wiring (`ThreadExamplesPlugin`): the thread runtime
# + its charcell chat UI + the example inline tools, so the `beet` binary can run
# `examples/thread/*.bsx`. Headless-friendly (no render), so it is independent of
# `bevy_default`. The inline tool is a `#[action(route)]`, so it pulls the
# router/net surface the route registration expands to.
thread = ["dep:beet_thread", "dep:beet_net", "dep:beet_router", "beet_action/json"]

[dependencies]
beet_action = { workspace = true, features = ["std", "reflect"] }
beet_ml = { workspace = true, features = ["spatial"], optional = true }
beet_spatial = { workspace = true, features = ["std"] }
beet_core = { workspace = true, features = ["std", "rand","bevy_keyboard"] }
beet_thread = { workspace = true, features = ["ui"], optional = true }
beet_net = { workspace = true, features = ["std", "serde", "json"], optional = true }
beet_router = { workspace = true, features = ["json"], optional = true }


serde.workspace = true
serde_json.workspace = true
# beet = { workspace = true, features = ["reflect"] }
bevy = { workspace = true }
# bevy-inspector-egui = "0.25.0"

[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }

[lib]
harness = false


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
