[package]
name = "beet_extra"
version.workspace = true
edition.workspace = true
description = "Extra components and systems for high-level beet examples and workflows"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# this feature is always enabled by beet if this crate is included
# but we use it to ensure no bevy_default for workspace tests
bevy_default = [
	"bevy/default",
	"beet_core/bevy_default",
	"beet_spatial/bevy_default",
	"beet_ml?/bevy_default",
	# the render scenes start their behaviour trees with `RunOnLoad`, the load verb
	# that lives with the rest of the family in `beet_net`.
	"dep:beet_net",
	# "beet_bevy/bevy_default",
]
# enable beet_ml integration; pulled in by the top-level `ml` feature
ml = ["dep:beet_ml"]
# serde (de)serialization, used by the thread examples' tool schemas (eg
# `ChoiceInput`/`BinaryOp`). Pulled in by `json`/`thread`, not standalone.
serde = ["dep:serde", "dep:serde_json"]
# JSON (de)serialization across the sub-crate surface, mirroring the umbrella
# `beet` crate's `json` feature shape for whichever sub-crates are deps here.
json = ["serde", "beet_core/json", "beet_action/json", "beet_net?/json", "beet_router?/json"]
# The wasm browser head for the perceive-act demo (v3): the `<WebHead>` socket client
# served to a browser tab, capturing the webcam, speaking via the Web Speech API and
# rendering an `<img>` face. Wasm-safe: it needs only the socket/router/action surface
# `json` + beet_net + beet_router pull, plus the wasm web-sys deps, NOT the native LLM
# `beet_thread` the `thread` set drags in. Built into the wasm binary via
# `beet-cli`'s `web_head` feature.
perceive_act_web = ["json", "dep:beet_net", "beet_net?/sockets", "dep:beet_router"]
# The agent-thread example tool wiring (`ThreadExamplesPlugin`): the thread runtime
# + its charcell chat UI + the example inline tools, so the `beet` binary can run
# `examples/thread/*.bsx`. Headless-friendly (no render), so it is independent of
# `bevy_default`. The inline tool is a `#[action(route)]`, so it pulls the
# router/net surface the route registration expands to, and `json` for the tool
# schemas' serde derives (which `json` forwards to `beet_action/json`).
thread = ["json", "dep:beet_thread", "dep:beet_net", "dep:beet_router"]
# The cloudflare/aws deploy example wiring (`InfraExamplesPlugin`): the deploy
# block/config types + the standalone deploy-action templates, so the `beet`
# binary runs `examples/infra/*.bsx`. Headless (no render), so independent of
# `bevy_default`. Pulls `beet_infra` with its `cloudflare_block` blocks + the
# `deploy` route actions, plus `cloudflare_dns` for the beet-site block's
# `DnsProvider::cloudflare` records.
infra = ["dep:beet_infra", "beet_infra/cloudflare_block", "beet_infra/cloudflare_dns", "beet_infra/deploy", "beet_infra/lambda_block", "beet_infra/lightsail_block", "beet_infra/fargate_block", "beet_infra/bindings_aws_dynamo", "beet_infra/aws_sdk", "json", "dep:beet_net", "beet_net/server", "beet_net/fs", "beet_net/aws_sdk", "dep:beet_router", "beet_router/std", "beet_router/native"]
# The QuickJS runtime for the `scripting` action example (`<Scripting>`), so the
# `beet` binary can run `examples/action/scripting.bsx`. Pulls `beet_action`'s
# typed `Script`/`ScriptAction` and the QuickJS engine; gated so a headless build
# that never runs the scripting example skips the C engine.
scripting = ["beet_action/quickjs_serde"]

[dependencies]
beet_action = { workspace = true, features = ["std", "reflect"] }
beet_ml = { workspace = true, features = ["spatial"], optional = true }
beet_spatial = { workspace = true, features = ["std"] }
beet_core = { workspace = true, features = ["std", "rand", "bevy_keyboard", "rsx"] }
beet_thread = { workspace = true, features = ["ui"], optional = true }
beet_net = { workspace = true, features = ["std", "serde", "json"], optional = true }
beet_router = { workspace = true, features = ["json"], optional = true }
beet_infra = { workspace = true, optional = true }


serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# beet = { workspace = true, features = ["reflect"] }
bevy = { workspace = true }
# bevy-inspector-egui = "0.25.0"

[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }

[lib]
harness = false


# the wasm browser head (`perceive_act_web`) drives the webcam, Web Speech and the
# `<img>` face through web-sys. The bindings ride beet_core transitively; these tables
# just add the extra feature gates the head APIs need (mirroring beet_thread's webrtc
# table). Harmless on a wasm build that leaves `perceive_act_web` off (the module is
# feature-gated, so nothing references them).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
# https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
web-sys = { workspace = true, features = [
	"Document",
	"Element",
	"Window",
	"Navigator",
	"HtmlImageElement",
	"HtmlCanvasElement",
	"HtmlVideoElement",
	"HtmlMediaElement",
	"CanvasRenderingContext2d",
	"MediaDevices",
	"MediaStream",
	"MediaStreamTrack",
	"MediaStreamConstraints",
	"SpeechSynthesis",
	"SpeechSynthesisUtterance",
	"Url",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys.workspace = true
wasm-bindgen.workspace = true
