[package]
name = "beet_flow"
version.workspace = true
edition.workspace = true
description = "An ECS control flow library"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
bevy_default = ["bevy/bevy_asset"]
reflect = ["dep:serde", "bevy/serialize"]

[dependencies]
beet_core.workspace = true

bevy.workspace = true
log.workspace = true
extend.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
sweet.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio.workspace = true
