[package]
name = "beet_flow"
version.workspace = true
edition.workspace = true
description = "An ECS control flow library"
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
bevy_default = ["bevy/bevy_asset"]
_sweet_runner = ["sweet/runner"]

[dependencies]
beet_core.workspace = true
bevy.workspace = true
extend.workspace = true

[dev-dependencies]
sweet.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
sweet = { workspace = true, features = ["runner"] }
