[package]
name = "beet_fs"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description = "FS utilities"
repository.workspace = true

[features]
default = ["serde", "bevy"]
serde = ["dep:serde"]
bevy = ["dep:bevy"]

[dependencies]
beet_utils.workspace = true
## utils
anyhow.workspace = true
thiserror.workspace = true
extend.workspace = true
bevy = { workspace = true, optional = true }

## terminal
crossterm = "0.28"

## cli
clap.workspace = true
ctrlc = "3"

## fs
notify = "8"
notify-debouncer-full = "0.5"
## async
tokio.workspace = true
futures.workspace = true


serde = { workspace = true, optional = true }


[dev-dependencies]
tempfile.workspace = true