[package]
name = "beet_infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description = "Terraform configuration represented as high level Bevy scenes"
repository.workspace = true


[features]
default = []
bindings_generator = ["tokens","prettyplease","beet_core/tokens"]
tokens = ["proc-macro2", "quote", "syn"]
aws_sdk = ["beet_net/aws_sdk"]
deploy = ["dep:beet_action", "dep:beet_router", "dep:sha2", "dep:base64"]
lambda_block = ["bindings_aws_common","bindings_aws_lambda","bindings_aws_dns","bindings_cloudflare_common"]
lightsail_block = ["bindings_aws_common","bindings_aws_lightsail"]
bindings_aws_common = []
bindings_aws_dns = []
bindings_aws_lightsail = []
bindings_aws_lambda = []
bindings_aws_all = [
	"bindings_aws_common",
	"bindings_aws_dns",
	"bindings_aws_lightsail",
	"bindings_aws_lambda",
]
bindings_cloudflare_common = []

[[bin]]
name = "bindings"
path = "src/bin/bindings.rs"
required-features = ["bindings_generator"]

[dependencies]
beet_core = { workspace = true, features = ["json", "rand", "fs"] }
beet_net.workspace = true
bytes.workspace = true
beet_action = { workspace = true, optional = true, features= ["json"] }
beet_router = { workspace = true, optional = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
heck.workspace = true
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

thiserror = { workspace = true }
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = { workspace = true }

[dev-dependencies]
beet_net = { workspace = true, features = ["ureq", "rustls-tls","server"] }
beet_router = { workspace = true, features = ["http"] }
beet_core = { workspace = true, features = ["testing"] }
pretty_env_logger.workspace = true
beet_infra = { path = ".", features = [
	"deploy",
	"aws_sdk",
	"bindings_generator",
	"bindings_aws_dns",
	"lambda_block",
	"lightsail_block",
] }

[[example]]
name = "lambda_test"
path = "examples/lambda_test.rs"
required-features = ["deploy", "aws_sdk", "lambda_block"]

[[example]]
name = "lightsail_test"
path = "examples/lightsail_test.rs"
required-features = ["deploy", "aws_sdk", "lightsail_block"]
