[package]
name = "beet_infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description = "Terraform configuration represented as high level Bevy scenes"
repository.workspace = true


[features]
default = []
bindings_generator = ["tokens","prettyplease","beet_core/tokens"]
tokens = ["proc-macro2", "quote", "syn"]
aws_sdk = ["beet_net/aws_sdk"]
deploy = ["beet_router", "dep:sha2", "dep:base64"]
# enables `beet_router`, unlocking the route actions (eg `build-wasm`) that need
# it for dispatch.
beet_router = ["dep:beet_router"]
lambda_block = ["bindings_aws_common","bindings_aws_lambda","bindings_aws_dns"]
lightsail_block = ["bindings_aws_common","bindings_aws_lightsail"]
fargate_block = ["bindings_aws_common","bindings_aws_fargate","bindings_aws_acm","bindings_aws_dns"]
# Opt-in Cloudflare DNS + load-balancer failover paths for the AWS blocks. Pulls
# the cloudflare terraform bindings; without it the AWS blocks are Route53-only.
cloudflare_dns = ["bindings_cloudflare_common"]
# The Cloudflare Containers + Workers blocks/actions. Wrangler-provisioned, so no
# terraform bindings; needs `deploy` (the actions) and `aws_sdk` (the container's
# `S3Store::r2` path) at the consumer.
cloudflare_block = []
bindings_aws_common = []
bindings_aws_dns = []
bindings_aws_acm = []
bindings_aws_lightsail = []
bindings_aws_lambda = []
bindings_aws_fargate = []
bindings_aws_all = [
	"bindings_aws_common",
	"bindings_aws_dns",
	"bindings_aws_acm",
	"bindings_aws_lightsail",
	"bindings_aws_lambda",
	"bindings_aws_fargate",
]
bindings_cloudflare_common = []

[[bin]]
name = "bindings"
path = "src/bin/bindings.rs"
required-features = ["bindings_generator"]

[dependencies]
beet_core = { workspace = true, features = ["std", "json", "rand", "fs"] }
beet_net = { workspace = true, features = ["std", "serde", "fs", "http"] }
bytes.workspace = true
beet_action = { workspace = true, features = ["std", "reflect", "json"] }
beet_router = { workspace = true, optional = true, features = ["json"] }
serde.workspace = true
# `std` for `to_writer_pretty` and the `io`-based serializers.
serde_json = { workspace = true, features = ["std"] }
heck.workspace = true
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

thiserror = { workspace = true }
proc-macro2 = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
syn = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-process = { workspace = true }

[dev-dependencies]
beet_net = { workspace = true, features = ["std", "serde", "fs", "http", "ureq", "rustls-tls", "server", "russh_client"] }
beet_router = { workspace = true, features = ["http"] }
beet_core = { workspace = true, features = ["testing"] }
pretty_env_logger.workspace = true
beet_infra = { path = ".", features = [
	"deploy",
	"aws_sdk",
	"bindings_generator",
	"bindings_aws_dns",
	"lambda_block",
	"lightsail_block",
	"fargate_block",
	"cloudflare_dns",
] }

[[example]]
name = "lambda_test"
path = "examples/lambda_test.rs"
required-features = ["deploy", "aws_sdk", "lambda_block"]

[[example]]
name = "lightsail_test"
path = "examples/lightsail_test.rs"
required-features = ["deploy", "aws_sdk", "lightsail_block"]

[[example]]
name = "fargate_test"
path = "examples/fargate_test.rs"
required-features = ["deploy", "aws_sdk", "fargate_block"]

[lib]
harness = false

[[test]]
name = "fargate"
path = "tests/fargate.rs"
harness = false

[[test]]
name = "site_load_test"
path = "tests/site_load_test.rs"
harness = false

[[test]]
name = "lambda"
path = "tests/lambda.rs"
harness = false

[[test]]
name = "lightsail"
path = "tests/lightsail.rs"
harness = false

[[test]]
name = "runtime_utils"
path = "tests/runtime_utils.rs"
harness = false
