[package]
name = "beet_ml"
version.workspace = true
edition.workspace = true
readme = "README.md"
description = "Machine Learning actions built upon beet_flow"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# default = ["cuda"]
# requires cuda to be installed https://developer.nvidia.com/cuda-downloads?target_os=Linux&target_arch=x86_64&Distribution=Ubuntu&target_version=24.04&target_type=deb_local
cuda = ["candle-transformers/cuda"]
candle = [
	"dep:candle-core",
	"dep:candle-transformers",
	"dep:candle-nn",
	"dep:tokenizers",
]
spatial = ["dep:beet_spatial"]
bevy_default = ["bevy/default"]

[dependencies]
beet_flow.workspace = true
beet_core = { workspace = true, features = ["rand"] }
bevy = { workspace = true, features = ["bevy_asset"] }
beet_spatial = { workspace = true, optional = true }

futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

#💡 huggingface
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
tokenizers = { version = "0.19.1", optional = true, default-features = false, features = [
	"unstable_wasm",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hf-hub = "0.4"

#💡 web
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log.workspace = true
js-sys.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true

[dev-dependencies]
# beet_ml = { path = "", features = ["bevy_default", "spatial"] }
sweet.workspace = true

pretty_env_logger.workspace = true
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio.workspace = true


[[example]]
name = "hello_rl_basic"
path = "examples/hello_rl_basic.rs"
required-features = ["candle", "bevy_default"]

[[example]]
name = "hello_ml_basic"
path = "examples/hello_ml_basic.rs"
required-features = ["candle"]
