[package]
name = "beet_ml"
version.workspace = true
edition.workspace = true
readme = "README.md"
description = "Machine Learning actions built upon beet_action"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["wgpu", "spatial"]
bevy_default = ["bevy/default", "beet_core/bevy_default"]
spatial = ["dep:beet_spatial"]

# burn backends — exactly one should be active for the host target.
wgpu = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
# cuda requires a system cuda install (arch linux: pacman -S cuda)
cuda = ["burn/cuda"]

[dependencies]
beet_action.workspace = true
beet_core = { workspace = true, features = ["rand", "fs"] }
beet_net = { workspace = true, features = ["fs", "ureq", "rustls-tls"] }
beet_spatial = { workspace = true, optional = true }

bevy = { workspace = true, features = ["bevy_asset"] }

burn = { version = "0.21.0-pre.4", default-features = false, features = ["std"] }
burn-store = { version = "0.21.0-pre.4", default-features = false, features = ["std", "safetensors"] }
tokenizers = { version = "0.22", default-features = false, features = ["unstable_wasm"] }

futures.workspace = true
log.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true

[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }
pretty_env_logger.workspace = true

[lib]
harness = false

[[example]]
name = "hello_rl_basic"
path = "examples/hello_rl_basic.rs"
required-features = ["bevy_default"]

[[example]]
name = "hello_ml_basic"
path = "examples/hello_ml_basic.rs"
